argo-apps/jira/prod/templates/jira-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira
  namespace: jira-prod
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: jira.prod.catena-x.polygran.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jira
                port:
                  number: 80
